<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Zondr</string>
    <string name="hello_world">Hello world!</string>
    <string name="test_caps">BARNAME</string>
    <string name="percent_ladies">80</string>
    <string name="percent_gents">20</string>
    <string name="line_length">line length</string>
    <string name="cover_amount_text">5.00</string>
    <string name="capacity">capacity</string>
    <string name="cover_text">COVER</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
